# minirov

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md
docs/: field-operations.md  setup.md
docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md
docs/hardware/: bom.md
firmware/pico-fc/: attitude.py  attitude_estimator.py  bar02.py  bme280.py  controller.py  display.py  fc.py  imu.py  indicators.py  lux.py  main.py  redundancy.py
minirov-brain/: config.py  main.py  requirements.txt
minirov-brain/llm/: ollama_client.py  prompts.py
minirov-brain/logs/: logger_test.db  mission_logger.py
minirov-brain/ui/: operator.py
minirov-brain/vehicle/: commands.py  mavlink_client.py  state.py
minirov-ros2/src/minirov_bringup/: launch.py  package.xml  setup.cfg  setup.py
minirov-ros2/src/minirov_bringup/config/: minirov_params.yaml
minirov-ros2/src/minirov_bringup/minirov_bringup/: failsafe_node.py  llm_node.py  logger_node.py  mavlink_node.py  operator_node.py
minirov-ros2/src/minirov_msgs/: package.xml
minirov-ros2/src/minirov_msgs/msg/: LLMObservation.msg  LLMResponse.msg  VehicleCommand.msg  VehicleState.msg
minirov-ros2/src/minirov_msgs/src/minirov_msgs/: CMakeLists.txt
telemetry-interface/: minirov-telemetry.html
