<?xml version="1.0"?>
<package format="3">
  <name>minirov_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions for miniROV</description>
  <maintainer email="hari@todo.todo">hari</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
